<resources>
    <string name="app_name">JupviecPJ</string>
    <!--   Bottom Nav Cus -->
    <string name="Home">Đặt DV</string>
    <string name="History">Lịch sử</string>
    <string name="Activity">Hoạt động</string>
    <string name="Notice">Thông báo</string>
    <string name="More">Khác</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Content1DDV">1, Dịch vụ giúp việc Dùng lẻ\n\n

- Phù hợp với những gia đình diện tích nhỏ, cần thời gian dọn dẹp linh hoạt\n\n
- Dọn dẹp nhà cửa trong vòng 2-4 tiếng mỗi khi có nhu cầu\n\n
- Dọn cơ bản, chủ yếu trên bề mặt và sắp xếp lại đồ đạc trong nhà.\n\n

2, Dịch vụ Tổng vệ sinh\n\n

- Phù hợp với nhu cầu tổng vệ sinh nhà cũ, nhà mới xây sửa, trước Tết hay dịp đặc biệt, cần có công cụ dụng cụ công nghiệp như: máy hút bụi, thang chữ A...\n\n
- Cần từ 2-4 nhân viên để đảm bảo khối lượng công việc\n\n
- Làm sạch toàn bộ hoặc một phần ngôi nhà, vệ sinh các ngóc ngách, khu vực thường ngày không dọn tới\n\n

3, Dịch vụ giúp việc Định kỳ\n\n

- Dọn dẹp nhà cửa định kỳ hàng tuần vào khung giờ và ngày cố định trong tuần\n\n
- Chi phí tiết kiệm từ 6 - 20% so với dùng lẻ\n\n
- Ổn định dịch vụ (thường cố định nhân viên trừ trường hợp bất khả kháng, không tăng giá trong thời hạn hợp đồng,....)</string>

    <string name="Content2DDV">Có 2 cách để nhập địa chỉ:\n\n

- Nhập đường - phố nhà bạn trong khung và chọn một gợi ý phù hợp nhất.\n\n

- Nếu không thấy gợi ý phù hợp, bạn có thể "Chọn địa điểm trên bản đồ" bằng cách di chuyển biểu tượng "chiếc chổi" đến khu vực bạn mong muốn.\n\n

Lưu ý: CHỈ NHẬP TÊN ĐƯỜNG - PHỐ. Sau khi nhập xong đường phố mới nhập số nhà, ngõ chính xác vào ô Số nhà/Căn hộ.</string>

    <string name="Content3DDV">- Thời gian dọn dẹp bao gồm Ngày làm, Ca làm (sáng - chiều - tối) và Thời lượng mỗi buổi làm.\n\n

- Riêng với hình thức giúp việc định kỳ, bạn cần chọn các Ngày làm việc HÀNG TUẦN và ngày Bắt đầu dọn dẹp.\n\n

- Bạn nên chọn Thời lượng từ 3,5 giờ cho mỗi buổi làm để đảm bảo chất lượng tốt nhất.</string>

    <string name="Content4DDV">Quý Khách có thể xem các chương trình khuyến mại tại:\n\n
- Cách 1: Nhấn "Sử dụng khuyến mại ở ô "MÃ KHUYẾN MẠI"\n
- Cách 2: Menu chân màn hình/ Thông báo/ Khuyến mại\n
- Cách 3: Theo dõi trên các kênh truyền thông chính thức trên\n
Website: https://www.jupviec.vn/\n
Fanpage: https://www.facebook.com/JupViec</string>

    <string name="Content5DDV">- Giá dịch vụ minh bạch trên ứng dụng, Lễ Tết giá tăng do nhu cầu tăng cao và để giữ người lao động.\n\n

- Giá dịch vụ thay đổi phụ thuộc vào thời gian (trong hay ngoài giờ hành chính), tần suất, khu vực, và yêu cầu khách hàng.\n\n

- Giá chưa bao gồm VAT.</string>

    <string name="Content6DDV">Quý khách có thể thanh toán cho JupViec.vn bằng những hình thức sau:\n\n

- Thanh toán online (Qua VNpay - Đối tác thanh toán của JupViec)\n\n

- Thanh toán trả góp qua thẻ tín dụng (Với hợp đồng định kỳ trị giá trên 3 triệu)\n\n

- Ví MoMo (Qua ứng dụng ví điện tử trên điện thoại)\n\n

- Viettel Pay (Qua ứng dụng ví điện tử trên điện thoại)\n\n

- Chuyển khoản (bằng thẻ ATM với các loại thẻ ATM thông dụng hoặc bằng internet banking)\n\n

        \t\t\t-- Tên tài khoản: Công ty Cổ phần Phát triển Dịch vụ Nhà sạch HMC\n\n
        \t\t\t-- Số tài khoản: 0611 001 925 656\n\n
        \t\t\t-- Tại ngân hàng: Vietcombank - Chi nhánh Ba Đình\n\n

- Thanh toán bằng tiền mặt khi nhân viên tới làm (với buổi dùng lẻ) hoặc tại văn phòng Công ty, địa chỉ:\n\n

        \t\t\t-- Hà Nội: Phòng 1309, Tầng 13, Khu A, Tòa nhà M3-M4, 91 Nguyễn Chí Thanh, P. Láng Hạ, Q. Đống Đa.\n\n
        \t\t\t-- TP. Hồ Chí Minh: Lầu 3, Toà nhà Green Country, Số 1, Đường 81, P. Tân Quy, Quận 7.\n\n
        \t\t\t-- TP. Hải Phòng: Văn phòng giao dịch: Số nhà 48, Đường Đào Đô, P. Thượng Lý, Q. Hồng Bàng, TP Hải Phòng\n\n
        \t\t\t-- TP. Bình Dương: Số 121/41/66, Đường Phạm Ngọc Thạch, KP5, P. Hiệp Thành, TP. Thủ Dầu Một.\n\n
        \t\t\t-- TP Đà Nẵng: Phòng 202, Tòa Nhà S-Home, Lô A 110, đường 30 tháng 4, P. Hoà Cường Bắc, Q. Hải Châu.\n\n
        \t\t\t-- TP. Nha Trang: Số 759, Đường Lê Hồng Phong, P. Phước Long, Thành phố Nha Trang</string>
    <string name="title_activity_block_nhan_vien">BlockNhanVien</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    //HelpCenter
    <string name="VPGDHN"><b>Văn phòng giao dịch: </b>Phòng 1309, Tầng 13, Khu A, Tòa nhà M3-M4, 91 Nguyễn Chí Thanh, Phường Láng Hạ, Quận Đống Đa</string>
    <string name="CS1HN"><b>Cơ sở 1: </b>Sàn gia dịch việc làm Hà Nội, 144 Trần Phú, Phường Mộ Lao, Quận Hà Đông</string>
    <string name="CS2HN"><b>Cơ sờ 2: </b>Số 91, Phố Nguyễn Khuyến, Phường Văn Miếu, Quận Đống Đa</string>

    <string name="VPGDHCM"><b>Văn phòng giao dịch: </b>Lầu 3, Tòa nhà Green Country, 1 đường 81, Phường Tân Quy, Quận 7</string>
    <string name="CS1HCM"><b>Cơ sở 1: </b>Phòng T2 tầng trệt, 82-84 Thăng Long, Phường 4, Quận Tân Bình</string>
    <string name="CS2HCM"><b>Cơ sở 2: </b>24 đường số 2, Khu dân cư Him Lam, Tổ 5, Khu phố 8, Phường Trường Thọ, Quận Thủ Đức</string>

    <string name="CS1HP"><b>Cơ sở 1: </b>48 Đào Đô, Phường Thượng Lý, Quận Hồng Bàng</string>

    <string name="CS1DN"><b>Cơ sở 1: </b>96 Lý Văn Tổ, Phường Phước Mỹ, Quận Sơn Trà</string>

    <string name="CS1BD"><b>Cơ sở 1: </b>32 Nguyễn Văn Bé, Phường Phú Cường, Thành phố Thủ Dầu Một</string>

    <string name="CS2BD"><b>Cơ sở 2: </b>789 Đại lộ Bình Dương, Khu phố Bình Đức 2, Phường Bình Hòa, Thị xã Thuận An</string>


    //Note
    <string name="note1">Cần vệ sinh nệm cao su, 1.8*23, có ố bẩn, hôi...\nNhập mã khuyễn mãi vào đây (nếu có) </string>
    <string name="note2">Nhập yêu cầu cụ thể của bạn \nVD: dọn kho, cọ vết ố, vệ sinh nhà sau xây
dựng. </string>

</resources>