<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activty.TrungTamHoTroActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:src="@drawable/activityhelpcenter" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    //Tổng Đài

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <FrameLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/custom_gradient_circle"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:src="@drawable/phonenew40" />
                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Tổng đài"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1900 6082"
                                android:textColor="#150FCB"
                                android:textSize="18dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="#808080" />

                    //Email

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <FrameLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:background="@drawable/custom_gradient_circle"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/emailnew40" />
                            </FrameLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Email"
                                    android:textSize="20dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="dvkh@jupviec.vn"
                                    android:textColor="#150FCB"
                                    android:textSize="18dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="#808080" />

                    //Website

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:onClick="btn_websiteJupViec"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <FrameLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:background="@drawable/custom_gradient_circle"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/earth40" />
                            </FrameLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Website"
                                    android:textSize="20dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="https://www.jupviec.vn"
                                    android:textColor="#150FCB"
                                    android:textSize="18dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="#808080" />

                    //Facebook

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:onClick="btn_FacebookJupViec"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <FrameLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:background="@drawable/custom_gradient_circle"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/fb40" />
                            </FrameLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Facebook"
                                    android:textSize="20dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:maxLines="1"
                                    android:text="https://www/facebook.com/JupViec.vn"
                                    android:textColor="#150FCB"
                                    android:textSize="18dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <!--        //Chi nhánh-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--            //Hà Nội-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#D3D3D3"
                        android:padding="15dp"
                        android:text="Văn phòng TP.Hà Nội"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/VPGDHN"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/CS1HN"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/CS2HN"
                        android:textSize="18dp" />
                    <!--            //HCM-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#D3D3D3"
                        android:padding="15dp"
                        android:text="Văn phòng TP.Hồ Chí Minh"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/VPGDHCM"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/CS1HCM"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/CS2HCM"
                        android:textSize="18dp" />
                    <!--            //Hải Phòng-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#D3D3D3"
                        android:padding="15dp"
                        android:text="Văn phòng TP.Hải Phòng"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/CS1HP"
                        android:textSize="18dp" />
                    <!--            //Đà Nẵng-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#D3D3D3"
                        android:padding="15dp"
                        android:text="Văn phòng TP.Đà Nẵng"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/CS1DN"
                        android:textSize="18dp" />
                    <!--            //Bình Dương-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#D3D3D3"
                        android:padding="15dp"
                        android:text="Văn phòng tỉnh Bình Dương"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/CS1BD"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/CS2BD"
                        android:textSize="18dp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

